modified main.css, main.js, task_a.html and task_b.html for style and validation

--- a/sample.html
+++ b/sample.html
@@ -21,7 +21,7 @@
         <p class="example">Lets try to select this...</p>
         <p class="example">...and this simultaneously.</p>
     </main>
-  
+ <script src="js/sample.js"></script>
 </body>
 
 </html>
